@@ -1,4 +1,5 @@
 version 1.9.15, in progress
+- Add new function: substr()
 - Enable use of arrays in the SFMT random number generator
 - Fix bug: incorrect handling of Poisson regression when the
   specification does not include an intercept term
